# libFenrir

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindFENRIR_SODIUM.cmake  FindFENRIR_UNBOUND.cmake  Findev.cmake  Findgit.cmake  Findgsl.cmake  Findtype_safe.cmake  Findubsan.cmake  Findunbound.cmake  compiler_flags.cmake  guess_architecture.cmake
doc/: CMakeLists.txt  libFenrir.tex
src/: deterministic.cpp
src/Fenrir/: Fenrir_v1.hpp  Fenrir_v1_hdr.hpp
src/Fenrir/v1/: Handler.hpp  Handler.ipp  common.hpp
src/Fenrir/v1/API/: Report.hpp
src/Fenrir/v1/auth/: Auth.hpp  Auth_Manager.hpp  Lattice.hpp  Lattice.ipp  Token.hpp  Token.ipp  Token_ID.hpp
src/Fenrir/v1/crypto/: .clang_complete  Crypto.hpp  Crypto_NULL.hpp  Sodium.hpp
src/Fenrir/v1/data/: AS_list.hpp  Conn0.hpp  Conn0.ipp  Conn0_Type.hpp  Device_ID.hpp  Error_Correction.hpp  IP.hpp  Storage.hpp  Storage_Raw.hpp  Storage_Raw.ipp  Storage_t.hpp  Storage_t.ipp  Token_t.hpp  Username.hpp
src/Fenrir/v1/data/control/: Control.hpp  Control.ipp
src/Fenrir/v1/data/packet/: Packet.hpp  Stream.hpp  Stream.ipp
src/Fenrir/v1/db/: Db.hpp  Db_Fake.hpp
src/Fenrir/v1/event/: Events_Base.hpp  Events_all.hpp  IO.hpp  Loop.hpp  Loop.ipp  Loop_callbacks.hpp  Loop_callbacks.ipp
src/Fenrir/v1/net/: Connection.hpp  Connection.ipp  Connection_Control.ipp  Direction.hpp  Handshake.hpp  Handshake.ipp  Handshake_ID.hpp  Link.hpp  Link.ipp  Link_defs.hpp  Role.hpp  Socket.hpp
src/Fenrir/v1/plugin/: Dynamic.hpp  Lib.hpp  Loader.hpp  Loader.ipp  Native.hpp
src/Fenrir/v1/rate/: RR-RR.hpp  Rate.hpp  Rate.ipp
src/Fenrir/v1/recover/: ECC_NULL.hpp  Error_Correction.hpp
src/Fenrir/v1/resolve/: DNSSEC.hpp  DNSSEC.ipp  Resolver.hpp
src/Fenrir/v1/service/: Service.hpp  Service_ID.hpp  Service_Info.hpp
src/Fenrir/v1/util/: Random.hpp  Shared_Lock.hpp  Shared_Lock.ipp  Z85.hpp  endian.hpp  hash.hpp  it_types.hpp  math.hpp  span_overlay.hpp
src/Fenrir/v1/wrapper/: include_all.cpp  include_all_hdr.cpp
src/cli/: Fenrir_AS.cpp  Fenrir_AS_Serializer.cpp  Fenrir_Client.cpp  Fenrir_base85.cpp
test/: test_cpp.cpp
